--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">GalleryTest</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="menu_search">search</string>
+    <string name="API_entry_point_before_tag">https://api.instagram.com/v1/tags/</string>
+    <string name="API_entry_point_after_tag">/media/recent?client_id=8f159dc9bf334630a37fdf4e607044cb</string>
 </resources>
